# overwatch

./: .gitignore  README.md  docker-compose.yaml  main.py  manage.py  pyproject.toml  todo.md
alerts/: admin.py  apps.py  engine.py  forms.py  models.py  signals.py  urls.py  views.py
alerts/migrations/: 0001_initial.py  0002_remove_alertrule_max_distance_and_more.py  0003_alter_alertrule_min_similarity.py  0004_alter_alertrule_min_similarity_alertreferenceimage.py
alerts/templates/alerts/: alerts.html  rule_delete_confirm.html  rule_form.html  rule_images.html  rule_list.html
ingest/: admin.py  ai.py  apps.py  models.py  tasks.py  urls.py  views.py
ingest/management/commands/: ingest.py  ingest_all_cameras.py  restream_hls.py
ingest/migrations/: 0001_initial.py  0002_remove_frame_embeddings.py  0003_camera.py  0004_delete_camera.py  0005_detectedobject.py  0006_alter_detectedobject_frame.py  0007_frame_embedding.py  0008_camera_and_frame_sync.py  0008_camera_frame_camera.py
ingest/templates/ingest/: camera_confirm_delete.html  camera_form.html  camera_list.html
matcher/: __init__.py  engine.py  persistence.py
matcher/persistence/: __init__.py
matcher/plugins/: __init__.py  index.py  query.py
overwatch/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
overwatch/templates/overwatch/: live.html
report/: eval-1.json  eval-2.json  eval-3.json  eval-4.json  evaluation_README.md  evaluation_core.py
search/: ai.py  apps.py  chroma_service.py  faiss_service.py  urls.py  views.py
stream/: urls.py  views.py
templates/: base.html
(+5 files in other folders)
