[project]
name = "overwatch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.5.2",
    "chromadb>=1.0.10",
    "clip",
    "django>=5.2.1",
    "django-celery-results>=2.6.0",
    "easyocr",
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "openai>=1.82.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "torch>=2.7.0",
    "torchaudio",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "ultralytics",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff.lint]
extend-select = ["I", "F401"]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
